--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,10 @@
 Changelog
 =========
 
-0.2 (unreleased)
+0.2 (2010-01-06)
 ----------------
 
-- Nothing changed yet.
+* Handle connection without login/pass
 
 
 0.1 (2009-06-08)
