--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,7 +4,7 @@ Changelog
 0.3.2 (unreleased)
 ------------------
 
-- Remove useless method refs #8174
+- Remove a duplicated method : #8174
   [seb]
 
 
