Add test-all parts
This refs affinitic #8959

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,9 @@ Changelog
 0.3.2 (unreleased)
 ------------------
 
+- Add test-all parts #8959
+  [Aurore]
+
 - Remove a duplicated method : #8174
   [seb]
 
